# ox

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md
checks/: test.ipynb
derivalogic/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
derivalogic/src/: App.tsx  index.css
derivalogic/src/api/: marketData.ts
derivalogic/src/components/: AdditionalDetailsInfo.tsx  AppSidebar.tsx  CounterpartyInfo.tsx  CounterpartyModal.tsx  DateInput.tsx  EventEditModal.tsx  EventsContainer.tsx  EventsContent.tsx  EventsHeader.tsx  EventsPage.tsx  EventsTimeline.tsx  MainLayout.tsx  NewScriptModal.tsx  ProtectedRoute.tsx  ScriptSaveModal.tsx  ScriptingArea.tsx  ScriptingEvent.tsx  SidebarFooter.tsx  SidebarHeader.tsx  SidebarScriptItem.tsx  SidebarScriptsList.tsx  TopBar.tsx  TransactionDetailsContainer.tsx  TransactionInfo.tsx  TransactionScriptInfo.tsx  UnsavedChangesModal.tsx  UserProfile.tsx
derivalogic/src/hooks/: useDraftDeletion.tsx  useEventMutations.tsx  useEventsData.tsx  useEventsHandlers.tsx  useEventsNavigation.tsx  useEventsQuery.tsx  useEventsState.tsx  useScriptMutations.tsx  useScriptsData.tsx  useSidebarSave.tsx  useTransactionDetails.tsx
derivalogic/src/pages/: Auth.tsx  Events.tsx  Feedback.tsx  Index.tsx  ScriptSettings.tsx  TransactionDetails.tsx
derivalogic/supabase/: config.toml
docs/: AGENTS.md  autodiff_refactor_plan.md
edge_service/: Cargo.toml
edge_service/src/: lib.rs
rustatlas/: Cargo.toml
rustatlas/benches/: adbenchmark.rs  fixedratepricing.rs
rustatlas/benches/common/: common.rs
rustatlas/src/: lib.rs  prelude.rs
rustatlas/src/alm/: cashaccount.rs  mod.rs  npvengine.rs  positiongenerator.rs  rolloversimulationengine.rs
rustatlas/src/cashflows/: cashflow.rs  fixedratecoupon.rs  floatingratecoupon.rs  mod.rs  simplecashflow.rs  traits.rs
rustatlas/src/core/: marketstore.rs  meta.rs  traits.rs
scripting/: Cargo.toml
scripting/benches/: valuation_benchmark.rs
scripting/cpp/: functDomain.h  scriptingConstCond.h  scriptingDomainProc.h  scriptingFuzzyEval.h  scriptingIfProc.h  scriptingNode.h  scriptingParser.h
scripting/examples/: asian_option.rs  barrier_option.rs  basic.rs  bs_vanilla_option.rs  digital.rs  exotic.rs  forward.rs  smoothing.rs  vanilla.rs  vanilla_option.rs  vanilla_swap.rs
scripting/src/: lib.rs  prelude.rs
scripting/src/data/: marketdata.rs  mod.rs  simulationdata.rs  simulationdatarequest.rs  termstructure.rs
scripting/src/models/: deterministicengine.rs  deterministicmodel.rs  marketmodel.rs  mod.rs  montecarloengine.rs  ramdomnumbers.rs  randomnumbers.rs  scriptingmodel.rs
scripting/src/nodes/: evaluator.rs  event.rs  indexer.rs  mod.rs  node.rs  traits.rs
scripting/src/parsers/: lexer.rs  parser.rs
scripting/src/parsing/: lexer.rs  parser.rs
scripting/src/utils/: errors.rs  math.rs  mod.rs  pareval.rs
scripting/src/visitors/: cashflow_collector.rs  cashflowcollector.rs  check_linearity.rs  domain_processor.rs  domainprocessor.rs  evaluator.rs  fuzzy_evaluator.rs  fuzzyevaluator.rs  ifconditiontransform.rs  ifprocessor.rs  indexer.rs  mod.rs  varindexer.rs
wasm/: Cargo.toml
wasm/example/: data.json  example.rs
wasm/examples/: event_pricing_from_json.rs  request.json
wasm/src/: data.json  lib.rs  parsing.rs
(+83 files in other folders)
