[package]
name = "scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.4"
thiserror = "1.0"
rustatlas = { path = "../rustatlas"}
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["adnumber"]
adnumber = []
f64 = []

