[package]
name = "scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.4"
thiserror = "1.0"
rustatlas = { path = "../rustatlas"}
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
sobol_burley = "0.5" 
statrs        = "0.16"
once_cell     = "1"  
sobol = "1.0.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "valuation_benchmark"
harness = false


[features]
default = ["adnumber"]
adnumber = []
f64 = []

