[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustatlas = { version = "0.1.0", path = "../rustatlas" }
scripting = { version = "0.1.0", path = "../scripting" }
serde = "1.0.219"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
wasm-pack = "0.13.1"
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
