[package]
name = "wasm_scripting"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustatlas = { version = "0.1.0", path = "../rustatlas" }
scripting = { version = "0.1.0", path = "../scripting" }
serde = "1.0.219"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["console_error_panic_hook"]

[target.wasm32-unknown-unknown]
rustflags = ["-C", "link-arg=-zstack-size=2097152"]  

# wasm-pack build --release --target web
# export RUSTFLAGS='--cfg getrandom_backend="wasm_js" -C link-arg=-zstack-size=2097152'